--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="js/myScript.js"></script>
 </head>
 <body>
-
+  <h1>Your simple Rock Paper Scissors</h1>
   <div>
 <button onclick=" 
 // Computer pick a random number between 0 and 1.
