Add Gif instead of text for buttons Added gifs and a new font from google fonts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Page Title</title>
   <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
   <script src="js/myScript.js"></script>
 </head>
 <body>
@@ -15,21 +16,21 @@ computerMove();
 //  I pick a Pick either & compare it to comp Pick
 pickComparison('rock');
 "
->Rock</button>
+><img src="img/rock.gif" alt="rock"></button>
 
 <button onclick="
 // Computer pick a random number between 0 and 1.
 computerMove();
 //  I pick a Pick either & compare it to comp Pick
 pickComparison('paper');"
->Paper</button>
+><img src="img/paper.gif" alt="paper"></button>
 
 <button onclick="
 // Computer pick a random number between 0 and 1.
 computerMove();
 //  I pick a Pick either & compare it to comp Pick
 pickComparison('scissors');"
->Scissors</button>
+><img src="img/scissors.gif" alt="scissors"></button>
 
 <!-- A reset button to reset the score  -->
 <button onclick="
